--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RevoU Fundamental Course</title>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>RevoU Fundamental Course Project</title>
+        <link rel="stylesheet" href="css/style.css" />
+      </head>
+      <body>
+        <!-- Menu -->
+        <nav>
+          <div class="wrapper">
+            <img src="assets/logoumt.png" alt="Logo Universitas Muhammadiyah Tangerang" />
+            <div class="menu">
+              <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#ourprofile">Our Profile</a></li>
+                <li><a href="#achievement">Achievement</a></li>
+                <li><a href="#messageus">Message Us</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <div class="wrapper">
+          <!-- Untuk Home -->
+          <section id="home">
+            <div class="kolom">
+              <h3>Hi Yahya Muhaimin, Welcome To Website</h3>
+              <p>Ini adalah contoh Website Universitas Muhammadiyah</p>
+              <img src="https://assets.kompasiana.com/items/album/2022/06/05/umt-tangerang-629c7bb7d263454c5f073d72.jpg?t=o&v=740&x=416" alt="gambar umt" />
+            </div>
+          </section>
+        </div>
+      </body>
+    </html>
+  </head>
 </html>
